force-app/main/default/objects/CustomOpportunity__c/CustomOpportunity__c.object-meta.xml
<CustomObject>
    <label>C商談</label>
    <nameField>
        <label>商談ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>