force-app/main/default/objects/CustomOpportunity__c/fields/agency_margin__c.field-meta.xml
<CustomField>
    <fullName>agency_margin__c</fullName>
    <inlineHelpText>代理店手数料（メニュー）の積み上げ集計</inlineHelpText>
    <label>代理店手数料（商談）</label>
    <summarizedField>Menu__c.agency_fee__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>