force-app/main/default/objects/CustomOpportunity__c/fields/agency_name__c.field-meta.xml
<CustomField>
    <fullName>agency_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店社名</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.FlgAd__c</field>
            <operation>equals</operation>
            <value>代理店</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>C商談 (代理店社名)</relationshipLabel>
    <relationshipName>C1</relationshipName>
    <type>Lookup</type>
</CustomField>