force-app/main/default/objects/CustomOpportunity__c/fields/agency_person3__c.field-meta.xml
<CustomField>
    <fullName>agency_person3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店担当者3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C商談 (代理店担当者3)</relationshipLabel>
    <relationshipName>agency3</relationshipName>
    <type>Lookup</type>
</CustomField>