force-app/main/default/objects/CustomOpportunity__c/fields/background__c.field-meta.xml
<CustomField>
    <fullName>background__c</fullName>
    <label>商談の経緯</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>代理店からの問い合わせ</fullName>
            </value>
            <value>
                <fullName>広告主からの問い合わせ</fullName>
            </value>
            <value>
                <fullName>外部からの紹介</fullName>
            </value>
            <value>
                <fullName>社内からの紹介</fullName>
            </value>
            <value>
                <fullName>自分の知り合い</fullName>
            </value>
            <value>
                <fullName>リピート</fullName>
            </value>
            <value>
                <fullName>以前からの提案</fullName>
            </value>
            <value>
                <fullName>自社広告</fullName>
            </value>
            <value>
                <fullName>イベント</fullName>
            </value>
            <value>
                <fullName>自主提案</fullName>
            </value>
            <value>
                <fullName>コンペ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>