force-app/main/default/objects/CustomOpportunity__c/fields/clent_name__c.field-meta.xml
<CustomField>
    <fullName>clent_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>C商談</relationshipLabel>
    <relationshipName>C</relationshipName>
    <type>Lookup</type>
</CustomField>