force-app/main/default/objects/CustomOpportunity__c/fields/commodity__c.field-meta.xml
<CustomField>
    <fullName>commodity__c</fullName>
    <label>商材（大分類）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ビジネス</fullName>
            </value>
            <value>
                <fullName>コンシューマ</fullName>
            </value>
            <value>
                <fullName>BtoB</fullName>
            </value>
            <value>
                <fullName>BtoC</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>