force-app/main/default/objects/CustomOpportunity__c/fields/commodity_middle__c.field-meta.xml
<CustomField>
    <fullName>commodity_middle__c</fullName>
    <label>商材（中分類）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>教育</fullName>
            </value>
            <value>
                <fullName>金融</fullName>
            </value>
            <value>
                <fullName>コンサル</fullName>
            </value>
            <value>
                <fullName>自治体</fullName>
            </value>
            <value>
                <fullName>BtoC</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>