force-app/main/default/objects/CustomOpportunity__c/fields/fee_sum__c.field-meta.xml
<CustomField>
    <fullName>fee_sum__c</fullName>
    <inlineHelpText>掲載料金・契約金請求金額（税別、メニュー）の積み上げ集計</inlineHelpText>
    <label>掲載料金・契約金請求金額（グロス、税別、商談）</label>
    <summarizedField>Menu__c.magazine_fee_billing_amount__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>