force-app/main/default/objects/CustomOpportunity__c/fields/juchu_kingaku_goukei__c.field-meta.xml
<CustomField>
    <fullName>juchu_kingaku_goukei__c</fullName>
    <inlineHelpText>総額契約金（税込）の積み上げ集計</inlineHelpText>
    <label>受注金額合計</label>
    <summarizedField>Menu__c.contract_money_tax__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>