force-app/main/default/objects/CustomOpportunity__c/fields/operating_profit_common_amount_divede__c.field-meta.xml
<CustomField>
    <fullName>operating_profit_common_amount_divede__c</fullName>
    <inlineHelpText>営業利益・共通費込（税抜、メニュー）の積み上げ集計</inlineHelpText>
    <label>営業利益・共通費込（税抜、商談）</label>
    <summarizedField>Menu__c.operating_profit_common_amount_divede__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>