force-app/main/default/objects/CustomOpportunity__c/fields/Opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_name__c</fullName>
    <label>商談名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>