force-app/main/default/objects/CustomOpportunity__c/fields/order_menu__c.field-meta.xml
<CustomField>
    <fullName>order_menu__c</fullName>
    <inlineHelpText>成約したメニューの積み上げ集計</inlineHelpText>
    <label>受注メニュー数</label>
    <summaryFilterItems>
        <field>Menu__c.menu_status__c</field>
        <operation>equals</operation>
        <value>成約・納品</value>
    </summaryFilterItems>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>