force-app/main/default/objects/CustomOpportunity__c/fields/product_cost_sum__c.field-meta.xml
<CustomField>
    <fullName>product_cost_sum__c</fullName>
    <inlineHelpText>制作にかかった費用（メニュー）の積み上げ集計</inlineHelpText>
    <label>制作にかかった費用（商談）</label>
    <summarizedField>Menu__c.product_cost__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>