force-app/main/default/objects/CustomOpportunity__c/fields/product_fee_sum__c.field-meta.xml
<CustomField>
    <fullName>product_fee_sum__c</fullName>
    <inlineHelpText>制作費・講師派遣料（税抜、メニュー）の積み上げ集計</inlineHelpText>
    <label>制作費・講師派遣料（ネット、税抜、商談）</label>
    <summarizedField>Menu__c.product_fee2__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>