force-app/main/default/objects/CustomOpportunity__c/fields/rejection_reason__c.field-meta.xml
<CustomField>
    <fullName>rejection_reason__c</fullName>
    <label>否決理由</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>