force-app/main/default/objects/CustomOpportunity__c/fields/role1__c.field-meta.xml
<CustomField>
    <fullName>role1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者（窓口）</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C商談</relationshipLabel>
    <relationshipName>role1</relationshipName>
    <type>Lookup</type>
</CustomField>