force-app/main/default/objects/CustomOpportunity__c/fields/role2__c.field-meta.xml
<CustomField>
    <fullName>role2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clent_name__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C商談 (企業担当者2)</relationshipLabel>
    <relationshipName>role2</relationshipName>
    <type>Lookup</type>
</CustomField>