force-app/main/default/objects/CustomOpportunity__c/fields/role3__c.field-meta.xml
<CustomField>
    <fullName>role3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業担当者3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clent_name__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C商談 (取引先責任者)</relationshipLabel>
    <relationshipName>role3</relationshipName>
    <type>Lookup</type>
</CustomField>