force-app/main/default/objects/CustomOpportunity__c/fields/sales_staff__c.field-meta.xml
<CustomField>
    <fullName>sales_staff__c</fullName>
    <formula>Owner:User.LastName  + &#39; &#39; + Owner:User.FirstName</formula>
    <label>広告営業担当</label>
    <type>Text</type>
</CustomField>