force-app/main/default/objects/CustomOpportunity__c/fields/seisaku_director_old__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director_old__c</fullName>
    <label>Old制作担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>seisaku_director</valueSetName>
    </valueSet>
</CustomField>