force-app/main/default/objects/CustomOpportunity__c/fields/syoudan_c_date__c.field-meta.xml
<CustomField>
    <fullName>syoudan_c_date__c</fullName>
    <label>刈り取り時期</label>
    <type>Date</type>
</CustomField>