force-app/main/default/objects/CustomOpportunity__c/fields/syoudan_start_date__c.field-meta.xml
<CustomField>
    <fullName>syoudan_start_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>商談開始日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>