force-app/main/default/objects/CustomOpportunity__c/fields/syoudan_status__c.field-meta.xml
<CustomField>
    <fullName>syoudan_status__c</fullName>
    <label>商談の状態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>提案中</fullName>
            </value>
            <value>
                <fullName>検討C</fullName>
            </value>
            <value>
                <fullName>検討B</fullName>
            </value>
            <value>
                <fullName>検討A</fullName>
            </value>
            <value>
                <fullName>内定</fullName>
            </value>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>否決</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>