force-app/main/default/objects/CustomOpportunity__c/fields/teian_menu__c.field-meta.xml
<CustomField>
    <fullName>teian_menu__c</fullName>
    <inlineHelpText>紐づく全メニューの積み上げ集計</inlineHelpText>
    <label>提案メニュー数</label>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>