force-app/main/default/objects/CustomOpportunity__c/fields/total_fee2__c.field-meta.xml
<CustomField>
    <fullName>total_fee2__c</fullName>
    <inlineHelpText>総額請求金・契約金額（税抜、メニュー）の積み上げ集計</inlineHelpText>
    <label>総額請求金・契約金額（税抜、商談）</label>
    <summarizedField>Menu__c.total_fee2__c</summarizedField>
    <summaryForeignKey>Menu__c.custom_opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>