force-app/main/default/objects/CustomOpportunity__c/recordTypes/edit.recordType-meta.xml
<RecordType>
    <fullName>edit</fullName>
    <active>true</active>
    <label>編集</label>
</RecordType>