force-app/main/default/objects/CustomOpportunity__c/recordTypes/new_opportunity.recordType-meta.xml
<RecordType>
    <fullName>new_opportunity</fullName>
    <active>true</active>
    <label>新規</label>
</RecordType>