force-app/main/default/objects/CustomOpportunity__c/validationRules/AccountLock.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountLock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(clent_name__r.is_deleted__c == True, ISNEW())</errorConditionFormula>
    <errorMessage>取引禁止のクライアントです。</errorMessage>
</ValidationRule>