force-app/main/default/objects/CustomOpportunity__c/validationRules/NameLock.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLock</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>IDは編集禁止です。</errorMessage>
</ValidationRule>