force-app/main/default/objects/CustomOpportunity__c/validationRules/Opportunity_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND( rejection_reason__c == null, ISPICKVAL(syoudan_status__c,&#39;否決&#39;))</errorConditionFormula>
    <errorMessage>否決理由を記入してください</errorMessage>
</ValidationRule>